--- a/helloUI/Base.lproj/Main.storyboard
+++ b/helloUI/Base.lproj/Main.storyboard
@@ -105,76 +105,112 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="3fU-rX-TdG">
-                                <rect key="frame" x="5" y="93" width="414" height="248"/>
-                                <constraints>
-                                    <constraint firstAttribute="width" secondItem="3fU-rX-TdG" secondAttribute="height" multiplier="207:124" id="cCz-Ed-LLP"/>
-                                    <constraint firstAttribute="width" constant="414" id="vy6-TY-m2s"/>
-                                </constraints>
-                            </imageView>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Store" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="8RT-Bn-HGg">
-                                <rect key="frame" x="50" y="372" width="300" height="20"/>
+                                <rect key="frame" x="71" y="371" width="300" height="20"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Time" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="J3g-zL-hQr">
-                                <rect key="frame" x="50" y="502" width="300" height="20"/>
+                                <rect key="frame" x="71" y="578" width="300" height="20"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Type" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="JH5-Ci-Nik">
-                                <rect key="frame" x="50" y="474" width="300" height="20"/>
+                                <rect key="frame" x="71" y="473" width="300" height="20"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Price" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="hAN-2D-H3P">
-                                <rect key="frame" x="50" y="448" width="300" height="20"/>
+                                <rect key="frame" x="71" y="447" width="300" height="20"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Address" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="2sC-9e-Ir1">
-                                <rect key="frame" x="50" y="423" width="300" height="20"/>
+                                <rect key="frame" x="71" y="422" width="300" height="20"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Place" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="eyv-jb-f0f">
-                                <rect key="frame" x="50" y="398" width="300" height="20"/>
+                                <rect key="frame" x="71" y="397" width="300" height="20"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Meat" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="GBc-AG-guV" userLabel="Meat Label">
-                                <rect key="frame" x="50" y="526" width="300" height="21"/>
+                                <rect key="frame" x="71" y="525" width="300" height="21"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Stable" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="TXn-yN-DhV" userLabel="Stable Label">
-                                <rect key="frame" x="50" y="552" width="200" height="21"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Staple" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="TXn-yN-DhV" userLabel="Staple Label">
+                                <rect key="frame" x="71" y="550" width="300" height="21"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Dishes" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="AZS-R3-Lqa" userLabel="Dishes Label">
-                                <rect key="frame" x="50" y="581" width="300" height="21"/>
+                                <rect key="frame" x="71" y="501" width="300" height="21"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="restaurant_20pt" translatesAutoresizingMaskIntoConstraints="NO" id="Ba6-JB-89X">
+                                <rect key="frame" x="43" y="371" width="20" height="20"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            </imageView>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="food_banke_20pt" translatesAutoresizingMaskIntoConstraints="NO" id="jOy-K5-vwl">
+                                <rect key="frame" x="43" y="397" width="20" height="20"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            </imageView>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="location_20pt" translatesAutoresizingMaskIntoConstraints="NO" id="Y6c-Nj-92t">
+                                <rect key="frame" x="43" y="422" width="20" height="20"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            </imageView>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="monetization_20pt" translatesAutoresizingMaskIntoConstraints="NO" id="tKl-Kk-JAr">
+                                <rect key="frame" x="43" y="447" width="20" height="20"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            </imageView>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="ramen_dining_20pt" translatesAutoresizingMaskIntoConstraints="NO" id="VWz-f9-6gT">
+                                <rect key="frame" x="43" y="473" width="20" height="20"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            </imageView>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="query_builder_20pt" translatesAutoresizingMaskIntoConstraints="NO" id="UGd-dW-Dis">
+                                <rect key="frame" x="43" y="578" width="20" height="20"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            </imageView>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="menu_20pt" translatesAutoresizingMaskIntoConstraints="NO" id="J7P-Hl-RXf">
+                                <rect key="frame" x="43" y="525" width="20" height="20"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            </imageView>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="dinner_dining_20pt" translatesAutoresizingMaskIntoConstraints="NO" id="yC6-SK-GBT">
+                                <rect key="frame" x="43" y="550" width="20" height="20"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            </imageView>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="menu_book_20pt" translatesAutoresizingMaskIntoConstraints="NO" id="neX-ft-xE0">
+                                <rect key="frame" x="43" y="502" width="20" height="20"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            </imageView>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="3fU-rX-TdG">
+                                <rect key="frame" x="11" y="96" width="393" height="248"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" secondItem="3fU-rX-TdG" secondAttribute="height" multiplier="207:124" id="cCz-Ed-LLP"/>
+                                    <constraint firstAttribute="width" constant="414" id="vy6-TY-m2s"/>
+                                </constraints>
+                            </imageView>
                         </subviews>
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                         <constraints>
@@ -192,7 +228,7 @@
                         <outlet property="placeLabel" destination="eyv-jb-f0f" id="ojL-DJ-0hG"/>
                         <outlet property="priceLabel" destination="hAN-2D-H3P" id="lVE-US-aQz"/>
                         <outlet property="restaurantImageView" destination="3fU-rX-TdG" id="H2u-Kv-P0w"/>
-                        <outlet property="stableLabel" destination="TXn-yN-DhV" id="vtx-6q-Syf"/>
+                        <outlet property="stapleLabel" destination="TXn-yN-DhV" id="k8c-57-KS8"/>
                         <outlet property="storeLabel" destination="8RT-Bn-HGg" id="rek-0d-Jiz"/>
                         <outlet property="timeLabel" destination="J3g-zL-hQr" id="Xve-0p-T3O"/>
                         <outlet property="typeLable" destination="JH5-Ci-Nik" id="vpP-T3-f9J"/>
@@ -221,4 +257,15 @@
             <point key="canvasLocation" x="128.98550724637681" y="51.5625"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="dinner_dining_20pt" width="20" height="20"/>
+        <image name="food_banke_20pt" width="20" height="20"/>
+        <image name="location_20pt" width="20" height="20"/>
+        <image name="menu_20pt" width="20" height="20"/>
+        <image name="menu_book_20pt" width="20" height="20"/>
+        <image name="monetization_20pt" width="20" height="20"/>
+        <image name="query_builder_20pt" width="20" height="20"/>
+        <image name="ramen_dining_20pt" width="20" height="20"/>
+        <image name="restaurant_20pt" width="20" height="20"/>
+    </resources>
 </document>
